k8s-rewrite/charts/web-app-stack/jtmb-dev/service.yaml
# jtmb.dev Service
apiVersion: v1
kind: Service
metadata:
  name: jtmb-dev
  namespace: website-stack
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: jtmb-dev
