k8s-rewrite/charts/web-app-stack/jtmb-dev/ingress.yaml
# jtmb.dev Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jtmb-dev-ingress
  namespace: website-stack
spec:
  rules:
    - host: jtmb-dev.branconet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jtmb-dev
                port:
                  number: 80
